# arctan-bitflags

./: Cargo.toml  README.md  TODO.md  rustfmt.toml
src/: flags128.rs  flags16.rs  flags32.rs  flags64.rs  flags8.rs  flags_128.rs  flags_16.rs  flags_32.rs  flags_64.rs  flags_8.rs  lib.rs  main.rs  tests.rs
tests/: deser_128.rs  deser_16.rs  deser_32.rs  deser_64.rs  deser_8.rs  tests_128.rs  tests_16.rs  tests_32.rs  tests_64.rs  tests_8.rs
