[package]
name = "arctan-bitflags"
version = "1.0.0-alpha.2"
edition = "2021"
authors = ["ArchTangent"]
categories = ["bitflags", "no-std"]
keywords = ["bitflags", "no-std"]

# `serde` is used when `serde-support` feature is enabled.
[dependencies]
serde = { version = "~1.0",  optional = true }
nanoserde = { version = "~0.1",  optional = true }

# Dependencies required for testing.
[dev-dependencies]
ron = { version = "~0.8", features = ["integer128"] }
serde = { version = "~1.0" }
serde_json = { version = "~1.0" }
arctan-bitflags = { path = ".", features = ["serde-support", "nanoserde-support"] }

# `serde-support`: for (de)serialization using `serde`.
# `nanoserde-support`: for (de)serialization using `nanoserde`. Requires `std`.
[features]
std = []
serde-support = ["serde"]
nanoserde-support = ["nanoserde", "std"]
